--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.3"
@@ -20,5 +22,3 @@
     "vite": "^5.0.8"
   }
 }
-
-
